# src/routes/favorite.js
@@ -10,6 +10,9 @@ router.route("/")
     .get(favorite.list)
     .post(favorite.create)
 
+router.route("/toggle")
+    .post(favorite.toggle)
+
 router.route("/:id")
     .get(favorite.read)
     .delete(favorite.delete)
